# GitLite

./: .gitignore  DEBUG.md  LICENSE  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  TROUBLESHOOTING.md  check-env.bat  index.html  layout-learning.html  package-lock.json  package.json  test-whitespace.txt  vite.config.ts
.cursor/commands/: askgpt.md
.cursor/rules/: diff-display-optimization.mdc  git-diff-debugging.mdc  git-unstage-behavior.mdc  react-component-best-practices.mdc  scroll-event-handling.mdc  scroll-indicator-stabilization.mdc  tooltip-implementation.mdc
scripts/: setup.bat  setup.sh
src/: App.tsx  TestSyntaxHighlight.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AiConfigModal.tsx  BranchList.tsx  CodeDiff.tsx  CodeDiff.tsx.backup  CodeDisplay.tsx  CodeViewer.tsx  CommitDatePickerButton.tsx  CommitGraphStrip.tsx  CommitList.tsx  DiffViewer.tsx  EnhancedCodeDiff.tsx  FileDiffModal.tsx  FileList.tsx  LogModal.tsx  MenuToolbar.tsx  MonacoColorized.tsx  MonacoDiffEditor.tsx  MonacoReadonly.tsx  OperationsPanel.tsx  ProxyConfigModal.tsx  RecentRepos.tsx  RemoteSyncBar.tsx  RepoFileTree.tsx  RepositorySelector.tsx  SimpleSyntaxHighlighter.tsx  SyntaxHighlightDemo.tsx  SyntaxHighlighter.tsx  TopToolbar.tsx  UnifiedCommitView.tsx  VSCodeDiff.tsx  VisualDiff.tsx  WorkspaceStatus.tsx
src/hooks/: useDarkMode.ts  useGit.ts  useMonacoThemeSync.ts
src/lib/: utils.ts
src/monaco/: env.ts
src/types/: git.ts
src/utils/: commitGraphLayout.ts  dateYmd.ts  monacoLanguage.ts  parseUnifiedDiff.ts  (+1 more)
(+5 files in other folders)
