[package]
name = "gitlite"
version = "0.1.0"
description = "A lightweight Git GUI client"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.0", features = [ "dialog-open", "fs-create-dir", "path-all", "fs-write-file", "fs-rename-file", "shell-open", "fs-remove-file", "fs-remove-dir", "fs-exists", "fs-read-dir", "fs-read-file", "fs-copy-file"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
git2 = "0.18"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dirs = "5.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
